# automation_concierge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
examples/: concierge.yaml
specs/001-github-automation-concierge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-github-automation-concierge/checklists/: requirements.md  security.md
specs/001-github-automation-concierge/contracts/: audit-schema.yaml  config-schema.yaml  event-schema.yaml
src/concierge/: __init__.py  __main__.py  cli.py  paths.py
src/concierge/actions/: __init__.py  console.py  executor.py  github_comment.py  slack.py
src/concierge/config/: __init__.py  loader.py  schema.py
src/concierge/github/: __init__.py  auth.py  client.py  events.py
src/concierge/logging/: __init__.py  audit.py
src/concierge/rules/: __init__.py  engine.py  matchers.py  schema.py
src/concierge/state/: __init__.py  checkpoint.py  migrations.py  store.py
tests/: conftest.py
tests/fixtures/: issue.json  notification_assignment.json  notification_mention.json  notification_review_request.json  pull_request.json  rate_limit.json  rate_limit_low.json  user.json
